--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,24 @@ services:
   jupyterlab:
     image: jupyter/datascience-notebook:latest
     container_name: jupyterlab
+    labels:
+      - "traefik.http.routers.jupyter.rule=Host(`${JUPYTER_LAB_HOST:-jupyterlab.docker.localhost}`)"
     ports:
-      - "${JUPYTER_PORT:8888}:8888"
+      - "${JUPYTER_PORT:-8888}:8888"
     volumes:
       - ./jupyter-data:/home/jovyan/work/persist
     environment:
       JUPYTER_ENABLE_LAB: "${JUPYTER_ENABLE_LAB}"
       JUPYTER_TOKEN: "${JUPYTER_TOKEN}"
+
+  reverse-proxy:
+    image: traefik:latest
+    command: --api.insecure=true --providers.docker
+    labels:
+      - "traefik.http.routers.admin.rule=Host(`traefik.docker.localhost`)"
+      - "traefik.http.services.jupyter.loadbalancer.server.port=8080"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
