FEATURE: Initialise Jupyter Hub at hub.docker.localhost

--- a/.example.env
+++ b/.example.env
@@ -1,9 +1,10 @@
 COMPOSE_PROJECT_NAME=jupyterhub
 
-HOST=jupyterhub.local
-ADMIN_USER=admin
-ADMIN_PASSWORD=secret
+HUB_HOST=jupyterhub.local
+HUB_ADMIN_USER=admin
+HUB_ADMIN_PASSWORD=secret
+
 
 JUPYTER_PORT=8888
-JUPYTER_ENABLE_LAB=yes
-JUPYTER_TOKEN=docker
+LAB_ENABLE=yes
+LAB_TOKEN=docker
