--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -3,8 +3,10 @@ FROM jupyterhub/jupyterhub:latest
 COPY jupyterhub_config.py .
 
 # Update the package list and install necessary packages
-RUN apt-get update && \
-    apt-get install -y passwd
+#RUN apt-get update && \
+#    apt-get install -y passwd
+
+RUN apt-get install -y passwd
 
 # Create the new user and set the password
 ARG HUB_ADMIN_USER
