--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -3,10 +3,8 @@ FROM jupyterhub/jupyterhub:latest
 COPY jupyterhub_config.py .
 
 # Update the package list and install necessary packages
-#RUN apt-get update && \
-#    apt-get install -y passwd
-
-RUN apt-get install -y passwd
+RUN apt-get update && \
+    apt-get install -y passwd
 
 # Create the new user and set the password
 ARG HUB_ADMIN_USER
@@ -16,3 +14,5 @@ RUN useradd -m ${HUB_ADMIN_USER} && \
 
 RUN pip install \
     dockerspawner==0.10.0
+
+CMD ["jupyterhub"]
