FEATURE: Update container packages and enable cull idle lab service

--- a/hub/Dockerfile
+++ b/hub/Dockerfile
@@ -3,8 +3,11 @@ FROM jupyterhub/jupyterhub:latest
 COPY jupyterhub_config.py .
 
 # Update the package list and install necessary packages
-RUN apt-get update && \
-    apt-get install -y passwd
+RUN apt update && \
+    apt upgrade -y && \
+    apt install -y passwd && \
+    apt clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Create the new user and set the password
 ARG HUB_ADMIN_USER
@@ -13,6 +16,7 @@ RUN useradd -m ${HUB_ADMIN_USER} && \
     echo "${HUB_ADMIN_USER}:${HUB_ADMIN_PASSWORD}" | chpasswd
 
 RUN pip install \
-    dockerspawner==0.10.0
+    jupyterhub-idle-culler \
+    dockerspawner
 
 CMD ["jupyterhub"]
