--- a/lab/Dockerfile
+++ b/lab/Dockerfile
@@ -1,62 +1,38 @@
-FROM jupyter/datascience-notebook:latest
+FROM base-jupyter-lab
 
 USER root
-
-RUN apt update && \
-    apt upgrade -y && \
-    apt install scilab -y && \
-
-RUN apt-get install -y --no-install-recommends \
-    fonts-dejavu \
-    tzdata \
-    gfortran \
-    gcc \
-    scilab \
-    pari-gp \
-    libpari-dev \
-    sagemath \
-    sagemath-jupyter \
-    libgmp-dev && \
-    apt clean && \
-    rm -rf /var/lib/apt/lists/*
 
 USER $NB_UID
 
 # Conda packages
 # Sage conflicts with the latest jupyterhub, thus we must relax the pinning
-RUN conda install --quiet --yes \
-    'r-base=3.4.1' \
-    'r-irkernel=0.8*' \
-    'r-plyr=1.8*' \
-    'r-devtools=1.13*' \
-    'r-tidyverse=1.1*' \
-    'r-shiny=1.0*' \
-    'r-rmarkdown=1.8*' \
-    'r-forecast=8.2*' \
-    'r-rsqlite=2.0*' \
-    'r-reshape2=1.4*' \
-    'r-nycflights13=0.2*' \
-    'r-caret=6.0*' \
-    'r-rcurl=1.95*' \
-    'r-crayon=1.3*' \
-    'r-randomforest=4.6*' \
-    'r-htmltools=0.3*' \
-    'r-sparklyr=0.7*' \
-    'r-htmlwidgets=1.0*' \
-    'r-hexbin=1.27*' \
-    'jupyterhub' \
-#    'sage=8.*' \
-    'julia=1.0*' && \
-    conda clean -tipsy && \
+RUN conda install --yes -c conda-forge  \
+    r-base \
+    r-irkernel \
+    r-plyr \
+    r-devtools \
+    r-tidyverse \
+    r-shiny \
+    r-rmarkdown \
+    r-forecast \
+    r-rsqlite \
+    r-reshape2 \
+    r-nycflights13 \
+    r-caret \
+    r-rcurl \
+    r-crayon \
+    r-randomforest \
+    r-htmltools \
+    r-sparklyr \
+    r-htmlwidgets \
+    r-hexbin \
+#    julia  \
+    jupyterhub \
+    && \
+    conda clean -tip && \
     fix-permissions $CONDA_DIR
 
-# Update Node to LTS and install IJavascript kernel
-RUN conda install --quiet --yes -c conda-forge nodejs=18 && \
-    ijsinstall && \
-    npm install -g ijavascript
-
 ENV CPATH=$CONDA_DIR/include
-
 
 RUN pip install \
     pari_jupyter \
@@ -68,4 +44,3 @@ RUN sed -i 's/"\/usr\/bin\/sage"/"env", "PATH=\/usr\/local\/sbin:\/usr\/local\/b
 USER $NB_UID
 
 COPY ./conda-activate.sh /usr/local/bin/before-notebook.d/
-
