--- a/.example.env
+++ b/.example.env
@@ -1,10 +1,14 @@
 COMPOSE_PROJECT_NAME=jupyterhub
 
-HUB_HOST=jupyterhub.local
+# Hub specific configuration
+HUB_PORT=8000
+HUB_HOST=hub.docker.localhost
 HUB_ADMIN_USER=admin
-HUB_ADMIN_PASSWORD=secret
+HUB_ADMIN_PASSWORD=test
+HUB_JUPYTER_IMAGE=jupyterlab
+HUB_HOST_DIR=/path/to/host/data
 
-
-JUPYTER_PORT=8888
+# Lab specific configuration
+LAB_HOST=jupyter.docker.localhost
 LAB_ENABLE=yes
 LAB_TOKEN=docker
