FEATURE: Make proxy http port configurable

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,8 @@
 COMPOSE_PROJECT_NAME=jupyterhub
 
+# Proxy specific configuration
+PROXY_PORT=8080
+
 # Hub specific configuration
 HUB_PORT=8000
 HUB_HOST=hub.docker.localhost
