--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - traefik.http.routers.admin.rule=Host(`traefik.docker.localhost`)
       - traefik.http.services.admin.loadbalancer.server.port=8080
     ports:
-      - "80:80"
+      - "${PROXY_PORT:-80}:80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
